--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
+    "name": "kadraliev/robot-txt-editor",
+    "type": "library",
+    "description": "Laravel package for editing of robot.txt",
     "keywords": [
         "framework",
         "laravel"
@@ -34,7 +34,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Kadraliev\\RobotTxtEditor\\": "packages/kadraliev/robottxteditor/src"
         },
         "classmap": [
             "database/seeds",
