--- a/composer.json
+++ b/composer.json
@@ -2,63 +2,26 @@
     "name": "kadraliev/robot-txt-editor",
     "type": "library",
     "description": "Laravel package for editing of robot.txt",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Rasul Kadraliev",
+            "email": "rasul@kadraliev.com"
+        }
+    ],
     "require": {
-        "php": "^7.2.5|^8.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
-        "laravel/framework": "^7.29",
-        "laravel/tinker": "^2.5"
-    },
-    "require-dev": {
-        "facade/ignition": "^2.0",
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
+        "php": ">=7.1"
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "providers": [
+                "Kadraliev\\Robottxteditor\\RobotTxtEditorProvider"
+            ]
         }
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Kadraliev\\RobotTxtEditor\\": "packages/kadraliev/robottxteditor/src"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
+            "Kadraliev\\Robottxteditor\\": "src/"
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
     }
 }
